--- a/src/css/defaults.css
+++ b/src/css/defaults.css
@@ -22,8 +22,8 @@
     --spacing    : 1rem;
 
     /* Font Families */
-    --font-arial  : "Arial",         sans-serif;
-    --font-cursive: "Comic Sans MS", cursive, sans-serif;
+    --font-arial  : "Arial", sans-serif;
+    --font-comic: "Comic Sans MS", cursive, sans-serif;
 
     /* Text Sizes */
     --text-1  : 1rem;
