--- a/templates/_errors/404.twig
+++ b/templates/_errors/404.twig
@@ -3,7 +3,7 @@ TEMPLATE SETTINGS
 ######################}
 
 {# Extends #}
-{% extends "_layout/_main" %}
+{% extends "_layout/main" %}
 
 {######################
 END TEMPLATE SETTINGS
