--- a/templates/homepage/index.twig
+++ b/templates/homepage/index.twig
@@ -3,7 +3,7 @@ TEMPLATE SETTINGS
 ######################}
 
 {# Extends #}
-{% extends "_layout/_main" %}
+{% extends "_layouts/main" %}
 
 {######################
 END TEMPLATE SETTINGS
