--- a/templates/pages/_types/default.twig
+++ b/templates/pages/_types/default.twig
@@ -3,7 +3,7 @@ TEMPLATE SETTINGS
 ######################}
 
 {# Extends #}
-{% extends "_layout/_main" %}
+{% extends "_layouts/main" %}
 
 {# Setting page classes #}
 {% set bodyClass = entry.section.handle ~ '-' ~ entry.type %}
