--- a/templates/_layouts/main.twig
+++ b/templates/_layouts/main.twig
@@ -1,14 +1,3 @@
-{######################
-TEMPLATE SETTINGS
-######################}
-
-{# Import Macros #}
-{# {% import '_macros/_typography' as typography %} #}
-
-{######################
-END TEMPLATE SETTINGS
-######################}
-
 <!DOCTYPE html>
 <html
     xmlns="http://www.w3.org/1999/xhtml"
@@ -53,5 +42,6 @@ END TEMPLATE SETTINGS
 
         {# https://instant.page #}
         <script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
+        {# End Instant Page #}
     </body>
 </html>
