--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,9 @@
 /* Import Tailwind pointing the source at the directory root */
-@import "tailwindcss" source("../../");
+@import 'tailwindcss' source('../../');
 
 /* Tailwind variable overrides */
-@import "./defaults.css";
+@import './defaults.css';
 
 /* Starts custom CSS */
-@import "./base.css";
-@import "./buttons.css";
+@import './base.css';
+@import './buttons.css';
