--- a/templates/index.twig
+++ b/templates/index.twig
@@ -10,5 +10,9 @@ END TEMPLATE SETTINGS
 ######################}
 
 {% block body %}
-    <h1>Welcome to the Project. Delete this file and get started.</h1>
+    <h1>
+        <strong>Welcome to Craft CMS 5.</strong>
+        <br>
+        Delete <code class="bg-yellow-50 text-yellow-800 p-p5 rounded-md">/index.twig</code> to get started.
+    </h1>
 {% endblock %}
