--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,57 +1,49 @@
 @layer base {
     html {
-        @apply
-            text-black
+        @apply text-black
             text-[10px]
             scroll-smooth
             antialiased;
     }
 
     body {
-        @apply
-            text-1p8
+        @apply text-1p8
             md:text-2
             bg-white;
     }
 
     ::selection {
-        @apply
-            bg-black
+        @apply bg-black
             text-white;
     }
 
     a:focus,
     button:focus {
-        @apply
-            outline-none
+        @apply outline-none
             ring-2;
     }
 
     img,
     svg {
-        @apply
-            max-w-full
+        @apply max-w-full
             h-auto;
     }
 
     /* Hide Alpine.js components that are hidden by default */
     [x-cloak] {
-        @apply
-            hidden;
+        @apply hidden;
     }
 }
 
 @layer components {
     .wrapper {
-        @apply
-            w-full
+        @apply w-full
             max-w-screen-2xl
             mx-auto
             px-[3vw];
 
         &-no-padding {
-            @apply
-                max-w-screen-2xl
+            @apply max-w-screen-2xl
                 mx-auto;
         }
     }
