--- a/src/css/defaults.css
+++ b/src/css/defaults.css
@@ -1,7 +1,7 @@
 @theme {
     /* Colors */
     --color-black: #000000;
-    --color-white: #FFFFFF;
+    --color-white: #ffffff;
 
     /* --color-gray-50: oklch(0.985 0.001 106.423);
     --color-gray-100: oklch(0.97 0.001 106.424);
@@ -17,35 +17,35 @@
 
     /* Spacing */
     --spacing-p25: 0.25rem;
-    --spacing-p5 : 0.5rem;
+    --spacing-p5: 0.5rem;
     --spacing-p75: 0.75rem;
-    --spacing    : 1rem;
+    --spacing: 1rem;
 
     /* Font Families */
-    --font-arial  : "Arial", sans-serif;
-    --font-comic: "Comic Sans MS", cursive, sans-serif;
+    --font-arial: 'Arial', sans-serif;
+    --font-comic: 'Comic Sans MS', cursive, sans-serif;
 
     /* Text Sizes */
-    --text-1  : 1rem;
+    --text-1: 1rem;
     --text-1p2: 1.2rem;
     --text-1p4: 1.4rem;
     --text-1p6: 1.6rem;
     --text-1p8: 1.8rem;
-    --text-2  : 2rem;
+    --text-2: 2rem;
     --text-2p2: 2.2rem;
     --text-2p4: 2.4rem;
     --text-2p6: 2.6rem;
     --text-2p8: 2.8rem;
-    --text-3  : 3rem;
+    --text-3: 3rem;
     --text-3p2: 3.2rem;
     --text-3p4: 3.4rem;
     --text-3p6: 3.6rem;
     --text-3p8: 3.8rem;
-    --text-4  : 4rem;
-    --text-5  : 5rem;
-    --text-6  : 6rem;
-    --text-7  : 7rem;
-    --text-8  : 8rem;
-    --text-9  : 9rem;
-    --text-10 : 10rem;
+    --text-4: 4rem;
+    --text-5: 5rem;
+    --text-6: 6rem;
+    --text-7: 7rem;
+    --text-8: 8rem;
+    --text-9: 9rem;
+    --text-10: 10rem;
 }
