--- a/templates/_layouts/main.twig
+++ b/templates/_layouts/main.twig
@@ -11,12 +11,14 @@
         <link rel="home" href="{{ siteUrl }}" />
 
         {# Favicon Meta goes here #}
-        {# <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
+        {#
+        <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
         <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
         <link rel="shortcut icon" href="/images/favicon/favicon.ico" />
         <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
-        <meta name="apple-mobile-web-app-title" content="Orpheum Theatre Group" />
-        <link rel="manifest" href="/images/favicon/site.webmanifest" /> #}
+        <meta name="apple-mobile-web-app-title" content="{{ siteName }}" />
+        <link rel="manifest" href="/images/favicon/site.webmanifest" />
+        #}
 
         {{ craft.vite.script("src/app.js", false) }}
 
